<resources>
    <string name="app_name">AjmanDED</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open" translatable="false">open drawer</string>
    <string name="drawer_close" translatable="false">close drawer</string>
    <string name="action_noti" translatable="false">Notification</string>
    <string name="action_lang" translatable="false">Language</string>

    <!--Online Services-->
    <string name="e_services">eServices</string>
    <string name="enquiries">Enquiries</string>
    <string name="new_license">New License</string>
    <string name="renew_license">Renew License</string>
    <string name="trade_name_reservation">Trade Name Reservation</string>
    <string name="new_permit">New\nPermit</string>
    <string name="licence_information">Licence Information</string>
    <string name="business_name">Business\nName</string>
    <string name="transaction_status">Transaction\nStatus</string>
    <string name="estimate_new_license_fees">Estimate New License Fees</string>
    <string name="user_guide">User Guide</string>
    <string name="service_guide">Service Guide</string>
    <string name="invest_in_ajman">Invest In Ajman</string>
    <string name="the_emirate_of_ajman_is_characterized_by_a_strategic_location_a_well_developed_infrastructure_comprising_port_roads_transport_and_industrial">The Emirate of Ajman is characterized by, a strategic location, a well-developed infrastructure comprising port, roads, transport and industrial</string>

    <!--Main Activity Fragment-->
    <string name="home">Home</string>
    <string name="online_services">eServices</string>
    <string name="about_ded">About DED</string>
    <string name="latest_news">Latest News</string>

    <!--AboutDED Fragment-->
    <string name="message">Message</string>
    <string name="message_body">To achieve a prosperous economy for the well-being of the people of the Emirate through planning, policy formulation, legislation, regulation, supervision and economic promotion</string>
    <string name="vision">The Vision</string>
    <string name="vision_body">A diversified competitive economy for sustainable development in the Emirate of Ajman</string>
    <string name="value_body">Team spirit, transparency, customer delight, innovation and innovation</string>
    <string name="value">The Value</string>

    <string name="chathead_content_title" translatable="false">Demo Chat: Active</string>
    <string name="content_text" translatable="false">Demo running.</string>

    <string name="chathead_click_message" translatable="false">Click</string>
    <string name="touch_finished_position" formatted="false" translatable="false">Current position (%d,%d)</string>
    <string name="deleted_soon" translatable="false">FloatingView will be deleted soon.</string>
    <string name="finish_deleted" translatable="false">FloatingView has been deleted.</string>
    <string name="action_call" translatable="false">80070</string>


    <string name="permissions_title" translatable="false">Permissions</string>
    <string name="draw_over_permissions_message" translatable="false">To display Audio Widget app needs the permission to draw over another apps.</string>
    <string name="read_ext_permissions_message" translatable="false">To load list of music app needs access to your media files.</string>
    <string name="btn_continue" translatable="false">Continue</string>
    <string name="btn_cancel" translatable="false">Cancel</string>
    <string name="toast_permissions_not_granted" translatable="false">Permissions not granted.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="most_used_services" translatable="false">Most Used Services</string>
    <string name="application_status" translatable="false">Check Application Status</string>
    <string name="enter_application_number" translatable="false">Application Number</string>
    <string name="service_centers_location" translatable="false">Service Centers Location</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="check_status" translatable="false">Check</string>
    <string name="issue_initial_approval" translatable="false">Issue Initial Approval</string>
    <string name="issue_new_permit" translatable="false">Issue New Permit</string>
    <string name="issue_new_certificate" translatable="false">Issue New Certificate</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
</resources>
