<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="eServices"
                android:textColor="@color/bg_red_light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <View
                android:id="@+id/view6"
                android:layout_width="368dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:background="@color/bg_gray_light"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_status"
                    android:textColor="@color/bb_tabletRightBorderDark"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/app_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_shape"
                        android:hint="@string/enter_application_number"
                        android:inputType="number"
                        android:nextFocusLeft="@id/app_edit_text"
                        android:nextFocusUp="@id/app_edit_text"
                        android:padding="5dp"
                        android:textSize="14sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/bg_shape_light_red"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="@string/check_status"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/gray" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:padding="2dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_shape_light_red_right"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_margin="15dp"
                                android:src="@drawable/icon4" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:gravity="center"
                                android:text="@string/renew_license"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:background="@drawable/bg_shape_light_red_left"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="15dp"
                            android:src="@drawable/icon2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:text="@string/trade_name_reservation"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:background="@drawable/bg_shape_light_red_right"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_margin="15dp"
                                android:src="@drawable/icon1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:gravity="center"
                                android:text="@string/issue_initial_approval"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_shape_light_red_left"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="15dp"
                            android:src="@drawable/icon7" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:text="@string/trade_name_reservation"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="2dp"
                            android:background="@drawable/bg_shape_light_red_right"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_margin="15dp"
                                android:src="@drawable/icon3" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:gravity="center"
                                android:text="@string/issue_new_permit"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:padding="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_shape_light_red_left"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_margin="15dp"
                            android:src="@drawable/icon8" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:text="@string/issue_new_certificate"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>
